--- a/markdown/002_reporting.Rmd
+++ b/markdown/002_reporting.Rmd
@@ -1,29 +1,16 @@
 ---
-title: "Report Bulanan"
-author: "Muhammad Apriandito"
+title: "Report Bulan Februari"
+author: "Silahkan Tuliskan Nama Anda Disini"
 output: html_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
+Silahkan buat sebuah contoh laporan bulanan terkait billing terbit dibulan Februari. 
+dengan menjawab beberapa pertanyaan berikut. 
 
-## R Markdown
+* Berapa Jumlah Dokumen (Inline).
+* Total Tagihan (Inline).
+* Jumlah Yang Sudah Dibayarkan, Jumlah yang belum dibayarkan (Visualisasi). 
+* Trend Pembayaran (Visualisasi).
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+Tidak ada format standar, silahkan buat dengan kreativitas anda masing-masing.
+Knit menjadi HTML, kemudian publish ke Rpubs.
